<resources>
    <string name="app_name">LearningLanguages1.0</string>
    <!-- Start -->
    <string name="welcome">Добро пожаловать</string>
    <string name="teach">Учить</string>
    <string name="addStart">Добавить</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="waitBit">Немного подождите</string>
    <!-- Teach -->
    <string name="translationTeach">Перевод</string>
    <string name="spelling">Правописание</string>
    <string name="start">Начать</string>
    <string name="settingQuestions">Настройка вопросов</string>
    <string name="nothingSelected">Нечего не выбрано</string>
    <!-- Add -->
    <string name="difficultyLevel">Уровень сложности</string>
    <string name="word">Слово</string>
    <string name="translationAdd">Перевод</string>
    <string name="language">Язык</string>
    <string name="addAdd">Добавить</string>
    <string name="addWord">Добавить слово</string>
    <!-- Task -->
    <string name="task">Задание</string>
    <string name="trueAnswer">Правильно</string>
    <string name="falseAnswer">Неправильно</string>
    <string name="questionTranslation">Переведите слово:</string>
    <string name="questionSpelling">Напишите правильно слово:</string>
    <string name="nextTask">Следующее задание</string>
    <!-- Setting -->
    <string name="setting">Настройки</string>
    <string name="languageSelection">Выбор языка</string>
    <string name="choosingTheme">Выбор темы</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
</resources>